0.1.16

* a minimal changes - removes some extra new lines at sparrow output

0.1.15 2016-08-15

* requires a latest version of Outthentic ( really the latest one )

0.1.14 2016-08-15

* requires a latest version of Outthentic

0.1.13 2016-08-12

* sparrow task boxes - a set of sparrow tasks

0.1.12 2016-07-11

* use latest version of Outthentic
* a minor documentation fix pull/4  - thanks to @olshevskiy87

0.1.11 2016-06-28

* make spi, spl, sproot locations configurable

0.1.10 2016-06-27

* correct location of spi, spl in case of running sparrow under sudo

0.1.9 2016-06-27

* verbose mode - show some message only when verbose mode is enabled
* small bug fixes


0.1.8 2016-06-16

* task/json configuration support
* made `sparrow index update` less verbose
* made `sparrow task|plg run` output a bit friendly
* require latest version of Outthentic to support JSON configurations

0.1.7 2016-05-28

* A no-changes release to require a latest version of Outthentic (0.1.5)

0.1.6 2016-05-28

* A no-changes release to require a latest version of Outthentic (0.1.4)

0.1.5 2016-05-22

* run plugin command: do not read plugin meta for private plugins

0.1.4 2016-05-22

* private plugins could be run as is

0.1.3 2016-05-13

* run task, plugin: PERL5LIB exported now to respect carton environment

0.1.2 2016-05-06

* small documentation fixes
* added to PATH carton bin path  when run plugins or tasks
* requires latest version of Outthentic

0.1.1 2016-05-05

* Dependencies support for Ruby ( Gemfile / bundler )

0.1.0 2016-05-04

A historical release. BREAKING CHANGES:

* checkpoints are replaced by tasks, see documentation
* sparrow plugins no require cpanfile to get run
* swat plugins are deprecated
* a placeholder for task boxes features ( coming soon )

0.0.25 2016-05-02

* a minor breaking changes in check run action ( see documentation )

0.0.24 2016-04-19

* runtime parameters support for generic plugins ( first implementation, could buggy )

0.0.23 2016-04-12
