@@ -4,7 +4,7 @@
       "L<Aleksei Melezhik|mailto:melezhik@gmail.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Module::Install version 1.16, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "perl_5"
    ],
@@ -15,8 +15,8 @@
    "name" : "Sparrow",
    "no_index" : {
       "directory" : [
-         "inc",
-         "t"
+         "t",
+         "inc"
       ]
    },
    "prereqs" : {
@@ -41,14 +41,6 @@
       }
    },
    "release_status" : "stable",
-   "resources" : {
-      "license" : [
-         "http://dev.perl.org/licenses/"
-      ],
-      "repository" : {
-         "url" : "https://github.com/melezhik/sparrow"
-      }
-   },
-   "version" : "0.1.15",
+   "version" : "v0.1.16",
    "x_serialization_backend" : "JSON::PP version 2.27300"
 }
