@@ -501,7 +501,7 @@ Examples:
 
 Use this command to run task box
 
-B<sparrow box run $path>
+B<sparrow box run $path [opts]>
 
 Where $path sets the file path to task box json file. A structure of the file:
 
@@ -547,6 +547,10 @@ Thus task box files should hold a list of sparrow tasks. Here is example:
       }
     
     ]
+
+To suppress some extra message from this command use C<--mode quiet>:
+
+    $ sparrow box run /path/to/my/box/ --mode quiet
 
 
 =head1 Sparrow plugins
