@@ -1,7 +1,8 @@
 0.1.16
 
 * a minimal changes - removes some extra new lines at sparrow output
-
+* add quiet parameter for `box run` command
+ 
 0.1.15 2016-08-15
 
 * requires a latest version of Outthentic ( really the latest one )
